# Csystem

./: .gitignore  Makefile.am  RFC.txt  assemblage_client.c  configure.ac  readme.md
src/: example.c  matchString.c  matchString.h  protopeach.c  protopeach.h
src/client/: client.c  client.h
src/server/: changeFruitProcess.c  changeFruitProcess.h  clear.c  clear.h  findFruit.c  findFruit.h  howmanyProcess.c  howmanyProcess.h  init.c  init.h  mainProcess.c  mainProcess.h  matchDomain.c  matchDomain.h  recvFruitProcess.c  recvFruitProcess.h  responce.c  responce.h  sendFuitProcess.c  sendFuitProcess.h  server.c  server.h  socket.c  socket.h  state.h
tests/: client.c  integrationTests.py  integrationTests.yaml  server.c  simple.c
